5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1638_651.log
== TEST (2019-04-09 11:38:54) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(m)
else:
	print(f)

-- OUTPUT:
(18.1, 7)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:39:41) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:39:50) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- EXECUTION TIME:
0.104902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/651/main.py", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:40:02) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- EXECUTION TIME:
0.13064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/651/main.py", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:05) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:51) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:23) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:53) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "F"):
	print(round(m,2))
else:
	print(round(f,2))

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:42:26) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "F"):
	print(round(m,2))
else:
	print(round(f,2))

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:43:29) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:43:50) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:10) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:49) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:32) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else (s == "F")
	print(round(f,2))

-- ERROR:
File "XXXX", line 9
    else (s == "F")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:39) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else (s == "F"):
	print(round(f,2))

-- ERROR:
File "XXXX", line 9
    else (s == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:46:55) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else (s == "F"):
	print(round(f,2))

-- EXECUTION TIME:
0.153704
-- ERROR:
  File "/home/codebench/codes/1638/651/main.py", line 9
    else (s == "F"):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:47:04) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "M"):
	print(round(m,2))
else:
	print(round(f,2))

-- EXECUTION TIME:
0.13434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/651/main.py", line 10, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:56) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)").upper()

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:25) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:15) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:32) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:52:23) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:07:56) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:08:10) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44,7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(f,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:09:03) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:09:16) 
-- CODE:
a = float(input("insira a altura: "))
s = input("insira o sexo: (M/F)")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if (s.upper() == "F"):
	print(round(f,2))
else:
	print(round(m,2))

-- EXECUTION TIME:
0.211632
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
